feat: Add Quick Start Guide and enhance error handling in reservation engine
- Introduced a comprehensive Quick Start Guide for setting up the environment, running dependency checks, and managing database backups.
- Implemented custom exceptions: BusinessException and ResourceNotFoundException for better error handling.
- Enhanced ErrorResponse class to include correlation tracking and validation errors.
- Developed DatabaseHealthIndicator and RedisHealthIndicator for improved service health monitoring.
- Added new SQL scripts for analytics reporting enhancements, including partition management and data retention strategies.
- Revamped backup and restore scripts with improved user interaction and metadata management.
- Created a detailed dependency checker script to validate environment setup before service startup.

--- a/apps/backend/java-services/infrastructure/config-server/src/main/resources/application.yml
+++ b/apps/backend/java-services/infrastructure/config-server/src/main/resources/application.yml
@@ -23,8 +23,8 @@ spring:
         #   timeout: 10
   security:
     user:
-      name: config-admin
-      password: ${CONFIG_SERVER_PASSWORD:admin123}
+      name: ${CONFIG_SERVER_USERNAME:config-admin}
+      password: ${CONFIG_SERVER_PASSWORD:#{null}}
       roles: ADMIN
 
 # Management and Monitoring
