--- a/apps/backend/java-services/pom.xml
+++ b/apps/backend/java-services/pom.xml
@@ -61,6 +61,9 @@
 
         <!-- Apache HTTP Client -->
         <httpclient5.version>5.3.1</httpclient5.version>
+
+        <!-- Database Migration -->
+        <flyway.version>10.21.0</flyway.version>
     </properties>
 
     <modules>
@@ -171,6 +174,18 @@
                 <groupId>org.apache.httpcomponents.client5</groupId>
                 <artifactId>httpclient5</artifactId>
                 <version>${httpclient5.version}</version>
+            </dependency>
+
+            <!-- Flyway Database Migration -->
+            <dependency>
+                <groupId>org.flywaydb</groupId>
+                <artifactId>flyway-core</artifactId>
+                <version>${flyway.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.flywaydb</groupId>
+                <artifactId>flyway-database-postgresql</artifactId>
+                <version>${flyway.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
