--- a/apps/backend/java-services/business-services/analytics-engine/src/main/resources/application.yml
+++ b/apps/backend/java-services/business-services/analytics-engine/src/main/resources/application.yml
@@ -16,10 +16,11 @@ spring:
     active: development
 
   # Database Configuration
+  # CRITICAL: Set DB_PASSWORD as environment variable
   datasource:
-    url: jdbc:postgresql://localhost:5432/modern_reservation_dev
+    url: ${DB_URL:jdbc:postgresql://localhost:5432/modern_reservation_dev}
     username: ${DB_USERNAME:reservation_user}
-    password: ${DB_PASSWORD:reservation_pass}
+    password: ${DB_PASSWORD:#{null}}
     driver-class-name: org.postgresql.Driver
     hikari:
       maximum-pool-size: 30
