--- a/apps/backend/java-services/business-services/availability-calculator/src/main/resources/application.yml
+++ b/apps/backend/java-services/business-services/availability-calculator/src/main/resources/application.yml
@@ -15,18 +15,23 @@ spring:
     active: development
 
   # Database Configuration
+  # CRITICAL: Set DB_PASSWORD as environment variable
   datasource:
-    url: jdbc:postgresql://localhost:5432/modern_reservation_dev
+    url: ${DB_URL:jdbc:postgresql://localhost:5432/modern_reservation_dev}
     username: ${DB_USERNAME:reservation_user}
-    password: ${DB_PASSWORD:reservation_pass}
+    password: ${DB_PASSWORD:#{null}}
     driver-class-name: org.postgresql.Driver
     hikari:
-      maximum-pool-size: 20
-      minimum-idle: 5
+      maximum-pool-size: ${DB_POOL_SIZE:20}
+      minimum-idle: ${DB_POOL_MIN_IDLE:5}
       idle-timeout: 300000
       max-lifetime: 1200000
-      connection-timeout: 20000
+      connection-timeout: 30000
       leak-detection-threshold: 60000
+      pool-name: AvailabilityCalcHikariPool
+      connection-test-query: SELECT 1
+      validation-timeout: 5000
+      register-mbeans: true
 
   # JPA Configuration
   jpa:
