--- a/apps/backend/java-services/business-services/rate-management/src/main/resources/application.yml
+++ b/apps/backend/java-services/business-services/rate-management/src/main/resources/application.yml
@@ -10,16 +10,23 @@ spring:
   config:
     import: "optional:configserver:http://localhost:8888/config"
 
+  # CRITICAL: Set DB_PASSWORD as environment variable
   datasource:
-    url: jdbc:postgresql://localhost:5432/modern_reservation_dev
-    username: reservation_user
-    password: reservation_pass
+    url: ${DB_URL:jdbc:postgresql://localhost:5432/modern_reservation_dev}
+    username: ${DB_USERNAME:reservation_user}
+    password: ${DB_PASSWORD:#{null}}
     driver-class-name: org.postgresql.Driver
     hikari:
-      maximum-pool-size: 20
-      minimum-idle: 5
+      maximum-pool-size: ${DB_POOL_SIZE:20}
+      minimum-idle: ${DB_POOL_MIN_IDLE:5}
       idle-timeout: 300000
-      connection-timeout: 20000
+      max-lifetime: 1200000
+      connection-timeout: 30000
+      leak-detection-threshold: 60000
+      pool-name: RateManagementHikariPool
+      connection-test-query: SELECT 1
+      validation-timeout: 5000
+      register-mbeans: true
 
   jpa:
     hibernate:
@@ -92,6 +99,26 @@ management:
   tracing:
     sampling:
       probability: 1.0
+
+# Resilience4j Configuration
+resilience4j:
+  circuitbreaker:
+    instances:
+      externalService:
+        registerHealthIndicator: true
+        slidingWindowSize: 10
+        minimumNumberOfCalls: 5
+        permittedNumberOfCallsInHalfOpenState: 3
+        automaticTransitionFromOpenToHalfOpenEnabled: true
+        waitDurationInOpenState: 10s
+        failureRateThreshold: 50
+  retry:
+    instances:
+      externalService:
+        maxAttempts: 3
+        waitDuration: 1s
+        enableExponentialBackoff: true
+        exponentialBackoffMultiplier: 2
 
 # Custom application properties
 rate-management:
