--- a/apps/backend/java-services/business-services/reservation-engine/src/main/resources/application.yml
+++ b/apps/backend/java-services/business-services/reservation-engine/src/main/resources/application.yml
@@ -7,27 +7,33 @@ spring:
     name: reservation-engine
   config:
     import:
-      - "configserver:http://localhost:8888/config"
-      - "optional:configserver:http://localhost:8888/config/business-services-common.yml"
+      - "configserver:${CONFIG_SERVER_URL:http://localhost:8888/config}"
+      - "optional:configserver:${CONFIG_SERVER_URL:http://localhost:8888/config}/business-services-common.yml"
   cloud:
     config:
-      username: config-admin
-      password: ${CONFIG_SERVER_PASSWORD:admin123}
+      username: ${CONFIG_SERVER_USERNAME:config-admin}
+      password: ${CONFIG_SERVER_PASSWORD:#{null}}
+      fail-fast: false
   profiles:
     active: dev
   # Database Configuration (using Docker PostgreSQL)
+  # CRITICAL: Set DB_PASSWORD as environment variable in production
   datasource:
-    url: jdbc:postgresql://localhost:5432/modern_reservation
-    username: reservation_user
-    password: reservation_pass
+    url: ${DB_URL:jdbc:postgresql://localhost:5432/modern_reservation}
+    username: ${DB_USERNAME:reservation_user}
+    password: ${DB_PASSWORD:#{null}}
     driver-class-name: org.postgresql.Driver
     hikari:
-      maximum-pool-size: 20
-      minimum-idle: 5
+      maximum-pool-size: ${DB_POOL_SIZE:20}
+      minimum-idle: ${DB_POOL_MIN_IDLE:5}
       idle-timeout: 300000
       max-lifetime: 1200000
-      connection-timeout: 20000
+      connection-timeout: 30000
       leak-detection-threshold: 60000
+      pool-name: ReservationEngineHikariPool
+      connection-test-query: SELECT 1
+      validation-timeout: 5000
+      register-mbeans: true
   jpa:
     hibernate:
       ddl-auto: none
@@ -69,6 +75,66 @@ spring:
     type: redis
     redis:
       time-to-live: 600000 # 10 minutes
+
+# Resilience4j Configuration
+resilience4j:
+  circuitbreaker:
+    instances:
+      availabilityService:
+        registerHealthIndicator: true
+        slidingWindowSize: 10
+        minimumNumberOfCalls: 5
+        permittedNumberOfCallsInHalfOpenState: 3
+        automaticTransitionFromOpenToHalfOpenEnabled: true
+        waitDurationInOpenState: 10s
+        failureRateThreshold: 50
+        slowCallRateThreshold: 100
+        slowCallDurationThreshold: 3s
+      paymentService:
+        registerHealthIndicator: true
+        slidingWindowSize: 10
+        minimumNumberOfCalls: 3
+        permittedNumberOfCallsInHalfOpenState: 2
+        waitDurationInOpenState: 15s
+        failureRateThreshold: 30
+        slowCallRateThreshold: 100
+        slowCallDurationThreshold: 5s
+      rateService:
+        registerHealthIndicator: true
+        slidingWindowSize: 10
+        minimumNumberOfCalls: 5
+        permittedNumberOfCallsInHalfOpenState: 3
+        waitDurationInOpenState: 10s
+        failureRateThreshold: 50
+        slowCallRateThreshold: 100
+        slowCallDurationThreshold: 2s
+  retry:
+    instances:
+      availabilityService:
+        maxAttempts: 3
+        waitDuration: 1s
+        enableExponentialBackoff: true
+        exponentialBackoffMultiplier: 2
+        retryExceptions:
+          - org.springframework.web.client.ResourceAccessException
+          - java.net.ConnectException
+      paymentService:
+        maxAttempts: 2
+        waitDuration: 2s
+        enableExponentialBackoff: false
+      rateService:
+        maxAttempts: 3
+        waitDuration: 500ms
+        enableExponentialBackoff: true
+        exponentialBackoffMultiplier: 2
+  timelimiter:
+    instances:
+      availabilityService:
+        timeoutDuration: 3s
+      paymentService:
+        timeoutDuration: 5s
+      rateService:
+        timeoutDuration: 2s
 
 # API Documentation
 springdoc:
