feat: Simplify config server import paths in application.yml files for consistency

--- a/apps/backend/java-services/infrastructure/eureka-server/src/main/resources/application.yml
+++ b/apps/backend/java-services/infrastructure/eureka-server/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   application:
     name: eureka-server
   config:
-    import: "configserver:http://localhost:8888/config"
+    import: "configserver:http://localhost:8888"
   cloud:
     config:
       username: config-admin
