--- a/apps/backend/java-services/infrastructure/gateway-service/src/main/resources/application.yml
+++ b/apps/backend/java-services/infrastructure/gateway-service/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   application:
     name: gateway-service
   config:
-    import: "configserver:${CONFIG_SERVER_URL:http://localhost:8888/config}"
+    import: "configserver:${CONFIG_SERVER_URL:http://localhost:8888}"
   cloud:
     config:
       username: ${CONFIG_SERVER_USERNAME:config-admin}
