feat: Update application.yml files to simplify config server import paths and enhance infrastructure management scripts with restart options

--- a/apps/backend/java-services/business-services/analytics-engine/src/main/resources/application.yml
+++ b/apps/backend/java-services/business-services/analytics-engine/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
   application:
     name: analytics-engine
   config:
-    import: "optional:configserver:http://localhost:8888/config"
+    import: "optional:configserver:http://localhost:8888"
   profiles:
     active: development
 
