--- a/apps/backend/java-services/business-services/availability-calculator/src/main/resources/application.yml
+++ b/apps/backend/java-services/business-services/availability-calculator/src/main/resources/application.yml
@@ -15,11 +15,10 @@ spring:
     active: development
 
   # Database Configuration
-  # CRITICAL: Set DB_PASSWORD as environment variable
   datasource:
     url: ${DB_URL:jdbc:postgresql://localhost:5432/modern_reservation_dev}
-    username: ${DB_USERNAME:reservation_user}
-    password: ${DB_PASSWORD:#{null}}
+    username: ${DB_USERNAME:postgres}
+    password: ${DB_PASSWORD:postgres}
     driver-class-name: org.postgresql.Driver
     hikari:
       maximum-pool-size: ${DB_POOL_SIZE:20}
