--- a/apps/backend/java-services/business-services/rate-management/src/main/resources/application.yml
+++ b/apps/backend/java-services/business-services/rate-management/src/main/resources/application.yml
@@ -10,11 +10,10 @@ spring:
   config:
     import: "optional:configserver:http://localhost:8888"
 
-  # CRITICAL: Set DB_PASSWORD as environment variable
   datasource:
     url: ${DB_URL:jdbc:postgresql://localhost:5432/modern_reservation_dev}
-    username: ${DB_USERNAME:reservation_user}
-    password: ${DB_PASSWORD:#{null}}
+    username: ${DB_USERNAME:postgres}
+    password: ${DB_PASSWORD:postgres}
     driver-class-name: org.postgresql.Driver
     hikari:
       maximum-pool-size: ${DB_POOL_SIZE:20}
