--- a/infrastructure/docker/docker-compose-infrastructure.yml
+++ b/infrastructure/docker/docker-compose-infrastructure.yml
@@ -36,6 +36,28 @@ services:
       - modern-reservation-network
     restart: unless-stopped
 
+  # Database Management UI
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    container_name: modern-reservation-pgadmin
+    ports:
+      - "5050:80"
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=admin@admin.com
+      - PGADMIN_DEFAULT_PASSWORD=admin
+      - PGADMIN_CONFIG_SERVER_MODE=False
+      - PGADMIN_CONFIG_MASTER_PASSWORD_REQUIRED=False
+      - PGADMIN_SERVER_JSON_FILE=/pgadmin4/servers.json
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
+      - ./pgadmin-servers.json:/pgadmin4/servers.json:ro
+      - ./pgadmin-pgpass:/pgpass:ro
+    networks:
+      - modern-reservation-network
+    restart: unless-stopped
+    depends_on:
+      - postgres
+
   # Cache
   redis:
     image: redis:7-alpine
@@ -60,6 +82,7 @@ services:
 
 volumes:
   postgres_data:
+  pgadmin_data:
   redis_data:
 
 networks:
