--- a/apps/backend/java-services/business-services/reservation-engine/pom.xml
+++ b/apps/backend/java-services/business-services/reservation-engine/pom.xml
@@ -106,7 +106,11 @@
         </dependency>
 
         <!-- Shared Backend Utils -->
-                <!-- Internal Dependencies will be added later when shared library is ready -->
+        <dependency>
+            <groupId>com.modernreservation</groupId>
+            <artifactId>backend-utils</artifactId>
+            <version>2.0.0</version>
+        </dependency>
 
         <!-- Apache HttpClient 5 for Spring Boot HTTP client -->
         <dependency>
