feat: Migrate from JSON to Avro serialization for ReservationCreatedEvent
- Implemented Avro schema for ReservationCreatedEvent and BaseEvent.
- Updated ReservationService to publish events using Avro-generated classes.
- Configured Kafka producer and consumer to use KafkaAvroSerializer and KafkaAvroDeserializer.
- Added Confluent Schema Registry to manage Avro schemas.
- Removed hand-written event classes in favor of Avro-generated classes.
- Updated application.yml for Schema Registry integration.
- Created test script for publishing Avro events and verifying schema registration.
- Documented migration process and usage of Avro events in AVRO_MIGRATION_COMPLETE.md and AVRO_QUICK_REFERENCE.md.

--- a/apps/backend/java-services/business-services/reservation-engine/pom.xml
+++ b/apps/backend/java-services/business-services/reservation-engine/pom.xml
@@ -17,7 +17,28 @@
     <name>Modern Reservation - Reservation Engine</name>
     <description>Core reservation management service handling booking lifecycle</description>
 
+    <repositories>
+        <repository>
+            <id>confluent</id>
+            <url>https://packages.confluent.io/maven/</url>
+        </repository>
+    </repositories>
+
     <dependencies>
+        <!-- Apache Avro -->
+        <dependency>
+            <groupId>org.apache.avro</groupId>
+            <artifactId>avro</artifactId>
+            <version>1.11.3</version>
+        </dependency>
+
+        <!-- Kafka Avro Serializer -->
+        <dependency>
+            <groupId>io.confluent</groupId>
+            <artifactId>kafka-avro-serializer</artifactId>
+            <version>7.5.0</version>
+        </dependency>
+
         <!-- Spring Boot Starters -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
