feat: Implement Tenant Cache in Reservation Engine
- Added application-test.yml for testing configuration of tenant service.
- Created SQL migration V013 to establish tenant_cache table for local caching.
- Documented the architecture and implementation of the tenant cache in TENANT_CACHE_RESERVATION_ENGINE_COMPLETE.md.
- Updated TENANT_SERVICE_ARCHITECTURE.md to reflect the new caching mechanism.
- Completed TENANT_SERVICE_COMPLETE.md with comprehensive details on the tenant service implementation.

--- a/apps/backend/java-services/business-services/rate-management/pom.xml
+++ b/apps/backend/java-services/business-services/rate-management/pom.xml
@@ -123,6 +123,13 @@
             <artifactId>httpclient5</artifactId>
         </dependency>
 
+        <!-- Internal Dependencies -->
+        <dependency>
+            <groupId>com.modernreservation</groupId>
+            <artifactId>tenant-commons</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
         <!-- Testing -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
