--- a/apps/backend/java-services/business-services/rate-management/src/main/resources/application.yml
+++ b/apps/backend/java-services/business-services/rate-management/src/main/resources/application.yml
@@ -67,6 +67,15 @@ spring:
       batch-size: 16384
       linger-ms: 1
       buffer-memory: 33554432
+    consumer:
+      group-id: rate-management-tenant-consumer
+      auto-offset-reset: earliest
+      enable-auto-commit: false
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring.json.trusted.packages: com.modernreservation.tenant.commons.events
+      max-poll-records: 10
 
 eureka:
   client:
